scrape route complete

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
                         <a class="nav-link active logo">News Scrape</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/scrape">Find News</a>
+                        <a class="nav-link" href="#" id="news-scrape">Find News</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Saved News</a>
@@ -47,8 +47,25 @@
             <!--Comments Populate Div-->
             <div class="col-md-12 pt-3" id="comments"></div>
         </div>
+        <div id="myModal" class="modal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <div class="modal-text"></div>
+            </div>
+        </div>
     </div>
 </body>
+
+<!--BootStrap JS-->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
 <!--Jquery CDN-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <!--scrape.js CDN-->
