get articles route complete

--- a/public/index.html
+++ b/public/index.html
@@ -39,13 +39,11 @@
                 <h1 class="text-center pt-5 text-center">News Scrape</h1>
             </div>
         </div>
-        <div class="row">
+        <div class="row" id="news">
             <!--News Populate Div-->
-            <div class="col-md-12 pt-3" id="news"></div>
-        </div>
-        <div class="row">
-            <!--Comments Populate Div-->
-            <div class="col-md-12 pt-3" id="comments"></div>
+            <div class="col-md-12 pt-5" id="scrape-btn">
+                <a class="btn btn-primary mx-auto" id="news-scrape">Primary</a>
+            </div>
         </div>
         <div id="myModal" class="modal">
             <div class="modal-content">
