article section style

--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,10 @@
                         <a class="nav-link active logo">News Scrape</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" id="news-scrape">Find News</a>
+                        <a class="nav-link nav-attr" href="#" id="news-scrape">Find News</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Saved News</a>
+                        <a class="nav-link nav-attr" href="#">Saved News</a>
                     </li>
                 </ul>
             </div>
@@ -36,13 +36,13 @@
         <!--Title-->
         <div class="row">
             <div class="col-md-12 title-center">
-                <h1 class="text-center pt-5 text-center">News Scrape</h1>
+                <h1 class="text-center pt-5 text-center page-title">News Scrape</h1>
             </div>
         </div>
         <div class="row" id="news">
             <!--News Populate Div-->
             <div class="col-md-12 pt-5" id="scrape-btn">
-                <a class="btn btn-primary mx-auto" id="news-scrape">Primary</a>
+                <a class="btn btn-primary mx-auto scrape-btn" id="news-scrape">Find News</a>
             </div>
         </div>
         <div id="myModal" class="modal">
