--- a/public/articles.html
+++ b/public/articles.html
@@ -24,7 +24,7 @@
             <div class="col-md-12 my-nav">
                 <ul class="nav">
                     <li class="nav-item">
-                        <a class="nav-link active logo">News Scrape</a>
+                        <a class="nav-link active logo" href="/">News Scrape</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link nav-attr" href="#" id="news-scrape">Find News</a>
@@ -49,7 +49,14 @@
         </div>
     </div>
     <div class="container">
-        
+        <div class="row">
+            <div class="col-md-12">
+                <h1 class="text-center">Articles that interest you</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 my-articles"></div>
+        </div>
         <div id="myModal" class="modal">
             <div class="modal-content">
                 <span class="close">&times;</span>
