--- a/public/articles.html
+++ b/public/articles.html
@@ -51,7 +51,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h1 class="text-center">Articles that interest you</h1>
+                <h1 class="text-center article-title pt-3">Commented Articles</h1>
             </div>
         </div>
         <div class="row">
